--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
   "homepage": "https://github.com/Yuri561/TechNow#readme",
   "devDependencies": {
     "nodemon": "^3.1.3"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.5"
   }
 }
