--- a/app/package.json
+++ b/app/package.json
@@ -37,6 +37,7 @@
     "react-bootstrap": "^2.10.2",
     "react-calendar": "^5.0.0",
     "react-dom": "^18.2.0",
+    "react-player": "^2.16.0",
     "react-router-dom": "^6.23.1",
     "react-signature-canvas": "^1.0.6",
     "react-tooltip": "^5.26.4",
