--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server"
+    "start": "nodemon server",
+    "client": "npm start --prefix client",
+    "build": "npm run build --prefix client",
+    "deploy": "npm run build && gh-pages -d client/build",
+    "predeploy": "npm install --prefix client"
   },
   "repository": {
     "type": "git",
@@ -15,9 +19,10 @@
   "bugs": {
     "url": "https://github.com/Yuri561/TechNow/issues"
   },
-  "homepage": "https://github.com/Yuri561/TechNow#readme",
+  "homepage": "https://Yuri561.github.io/TechNow",
   "devDependencies": {
-    "nodemon": "^3.1.3"
+    "nodemon": "^3.1.3",
+    "gh-pages": "^3.1.0"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
