--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "node backend/server.js",
+    "start": "node -r dotenv/config backend/server.js",
     "server": "nodemon backend/server.js",
     "client": "npm run dev --prefix app",
     "build": "npm run build --prefix app",
@@ -22,11 +22,13 @@
   },
   "homepage": "https://Yuri561.github.io/TechNow",
   "devDependencies": {
-    "nodemon": "^3.1.3",
-    "gh-pages": "^3.1.0"
+    "@types/jsonwebtoken": "^9.0.6",
+    "gh-pages": "^3.1.0",
+    "nodemon": "^3.1.3"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cookieparser": "^0.1.0",
     "dotenv": "^16.4.5"
   }
 }
