--- a/vercel.json
+++ b/vercel.json
@@ -1,23 +1,10 @@
 {
-  "version": 2,
   "builds": [
-    {
-      "src": "backend/server.js",
-      "use": "@vercel/node"
-    },
-    {
-      "src": "app/package.json",
-      "use": "@vercel/static-build"
-    }
+    { "src": "app/package.json", "use": "@vercel/static-build", "config": { "distDir": "app/dist" } },
+    { "src": "backend/server.js", "use": "@vercel/node" }
   ],
   "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "/backend/server.js"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/app/dist/$1"
-    }
+    { "src": "/api/(.*)", "dest": "backend/server.js" },
+    { "src": "/(.*)", "dest": "/index.html" }
   ]
 }
