--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "client": "npm run dev --prefix app",
     "build": "npm run build --prefix app",
     "predeploy": "npm run build --prefix app",
-    "deploy": "gh-pages -d app/dist",
-    "predeploy": "npm install --prefix app"
+    "deploy": "gh-pages -d app/dist"
   },
   "repository": {
     "type": "git",
@@ -25,11 +24,17 @@
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.6",
     "gh-pages": "^3.1.0",
-    "nodemon": "^3.1.3"
+    "nodemon": "^3.1.3",
+    "vite": "^2.7.13",
+    "@vitejs/plugin-react": "^1.0.0"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cookieparser": "^0.1.0",
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   }
 }
