--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,23 @@
 {
+  "version": 2,
+  "name": "technow",
   "builds": [
-    { "src": "app/package.json", "use": "@vercel/static-build", "config": { "distDir": "app/dist" } }
+    {
+      "src": "app/vite.config.js",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "app/dist"
+      }
+    },
+    {
+      "src": "backend/server.js",
+      "use": "@vercel/node"
+    }
   ],
   "routes": [
-    { "src": "/api/(.*)", "dest": "/api/$1" },
-    { "src": "/(.*)", "dest": "/index.html" }
+    {
+      "src": "/(.*)",
+      "dest": "/app/dist/$1"
+    }
   ]
 }
