--- a/vercel.json
+++ b/vercel.json
@@ -2,21 +2,25 @@
   "version": 2,
   "builds": [
     {
-      "src": "app/package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "app/dist"
-      }
+      "src": "api/**/*.ts",
+      "use": "@vercel/node"
     },
     {
-      "src": "backend/server.js",
-      "use": "@vercel/node"
+      "src": "src/**/*",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "public"
+      }
     }
   ],
   "routes": [
     {
+      "src": "/api/(.*)",
+      "dest": "/api/$1"
+    },
+    {
       "src": "/(.*)",
-      "dest": "/app/dist/$1"
+      "dest": "/src/$1"
     }
   ]
 }
