--- a/backend/package.json
+++ b/backend/package.json
@@ -7,11 +7,13 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
-    "express": "^4.17.1",
-    "cors": "^2.8.5",
-    "mongoose": "^5.13.3",
     "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^5.13.3",
+    "multer": "^1.4.5-lts.1",
     "serverless-http": "^2.6.0"
   }
 }
